WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58514
Creating a CairoPath instance is not thread safe
https://bugs.webkit.org/show_bug.cgi?id=58514
Summary
Creating a CairoPath instance is not thread safe
Joone Hur
Reported
2011-04-13 22:46:38 PDT
Creating a CairoPath instance is not thread safe.
Attachments
Proposed Patch
(9.34 KB, patch)
2011-04-14 01:17 PDT
,
Joone Hur
mrobinson
: review+
Details
Formatted Diff
Diff
Updated Patch
(9.71 KB, patch)
2011-04-14 10:08 PDT
,
Joone Hur
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joone Hur
Comment 1
2011-04-14 01:17:27 PDT
Created
attachment 89546
[details]
Proposed Patch I applied the following comment to this patch.
https://bugs.webkit.org/show_bug.cgi?id=57717#c23
Martin Robinson
Comment 2
2011-04-14 08:12:47 PDT
Comment on
attachment 89546
[details]
Proposed Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=89546&action=review
Looks good. Please move the two new files to PlatformPathCairo.* before landing. Thanks!
> Source/WebCore/CMakeListsEfl.txt:94 > + platform/graphics/cairo/PlatformCairoPath.cpp > platform/graphics/cairo/PlatformContextCairo.cpp
Probably better to name it PlatformPathCairo to match PlatformContextCairo.
> Source/WebCore/platform/graphics/cairo/PlatformCairoPath.h:22 > +#ifndef PlatformCairoPath_h > +#define PlatformCairoPath_h
Don't forget to update these header guards when you move this to PlatformPathCairo.
> Source/WebCore/platform/graphics/cairo/PlatformCairoPath.h:35 > + ~CairoPath() > + { > + }
You can place this on one line just like context().
> Source/WebCore/platform/graphics/cairo/PlatformCairoPath.h:45 > +#endif // CairoPath_h
Don't forget to update this header guard.
Joone Hur
Comment 3
2011-04-14 10:08:33 PDT
Created
attachment 89602
[details]
Updated Patch Thanks, Martin for the review.
WebKit Commit Bot
Comment 4
2011-04-14 22:18:20 PDT
Comment on
attachment 89602
[details]
Updated Patch Clearing flags on attachment: 89602 Committed
r83945
: <
http://trac.webkit.org/changeset/83945
>
WebKit Commit Bot
Comment 5
2011-04-14 22:18:25 PDT
All reviewed patches have been landed. Closing bug.
Brent Fulgham
Comment 6
2011-04-15 15:58:59 PDT
Correction for WinCairo build: Please watch out for new files that are not added to the Visual Studio projects! Committed
r84044
: <
http://trac.webkit.org/changeset/84044
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug