third_party/WebKit/Source/WebCore/platform/graphics/cairo/CairoUtilities.cpp
@@ -28,13 +28,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "CairoUtilities.h"
 
 #include "AffineTransform.h"
-#include "CairoPath.h"
 #include "Color.h"
 #include "FloatPoint.h"
 #include "FloatRect.h"
 #include "IntRect.h"
 #include "OwnPtrCairo.h"
 #include "Path.h"
+#include "PlatformPathCairo.h"
 #include "RefPtrCairo.h"
 #include <wtf/Vector.h>
 
