third_party/WebKit/Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp
@@ -36,7 +36,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #if PLATFORM(CAIRO)
 
 #include "AffineTransform.h"
-#include "CairoPath.h"
 #include "CairoUtilities.h"
 #include "ContextShadow.h"
 #include "FloatConversion.h"
@@ -49,6 +48,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Path.h"
 #include "Pattern.h"
 #include "PlatformContextCairo.h"
+#include "PlatformPathCairo.h"
 #include "RefPtrCairo.h"
 #include "SimpleFontData.h"
 #include <cairo.h>
