third_party/WebKit/Source/WebCore/platform/graphics/cairo/PathCairo.cpp
@@ -28,10 +28,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Path.h"
 
 #include "AffineTransform.h"
-#include "CairoPath.h"
 #include "FloatRect.h"
 #include "GraphicsContext.h"
 #include "OwnPtrCairo.h"
+#include "PlatformPathCairo.h"
 #include "PlatformString.h"
 #include "StrokeStyleApplier.h"
 #include <cairo.h>
